openshift/istio/ingress/IngressDeployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: ufs-provider
    deployment.kubernetes.io/revision: '2'
  labels:
    app: ingressgateway
    app.kubernetes.io/component: gateways
    app.kubernetes.io/instance: dev-minfin
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: gateways
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.0.2-7.el8-1
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    maistra.io/owner: dev-minfin
    release: istio
  name: ingressgateway
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ingressgateway
      istio: ingressgateway
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
        sidecar.istio.io/inject: 'false'
        sidecar.istio.io/statsInclusionPrefixes: cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xdc-grpc
      creationTimestamp: null
      labels:
        app: ingressgateway
        chart: gateways
        heritage: Tiller
        istio: ingressgateway
        maistra-control-plane: dev-minfin
        release: istio
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
            weight: 2
          - preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
            weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
      containers:
      - args:
        - proxy
        - router
        - --domain
        - dev-minfin.ocp-public.sbercloud.ru
        - --log_output_level=default:info
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --connectTimeout
        - 10s
        - --serviceCluster
        - ingressgateway
        - --proxyAdminPort
        - '15000'
        - --statusPort
        - '15020'
        - --controlPlaneAuthPolicy
        - NONE
        - --discoveryAddress
        # ISTIO PILOT
        - istio-pilot.ocp-public.sbercloud.ru:15010
        image: registry.redhat.io/openshift-service-mesh/proxyv2-rhel8:1.1.0
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 443
          name: https-443
          protocol: TCP
        - containerPort: 5443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 450m
            memory: 800Mi
          requests:
            cpu: 350m
            memory: 600Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/certs
          name: istio-certs
          readOnly: true
        - mountPath: /etc/istio/ingressgateway-certs
          name: ingressgateway-certs
          readOnly: true
        - mountPath: /etc/istio/ingressgateway-ca-certs
          name: ingressgateway-ca-certs
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: istio-certs
        secret:
          defaultMode: 400
          optional: true
          secretName: istio.default
      - name: ingressgateway-certs
        secret:
          defaultMode: 400
          optional: true
          secretName: istio-ingressgateway-certs
      - name: ingressgateway-ca-certs
        secret:
          defaultMode: 400
          optional: true
          secretName: istio-ingressgateway-ca-certs
      - name: signed-synapse
        secret:
          defaultMode: 400
          optional: true
          secretName: nz-signed-synapse
      - name: signed-ca-certs
        secret:
          defaultMode: 400
          optional: true
          secretName: nz-signed-ca
      - name: ott-uds-socket
        emptyDir:
          medium: Memory
