openshift/istio/ingress/IngressService.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingressgateway
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    release: istio
  name: istio-ingressgateway
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: ingressgateway
    istio: ingressgateway
    release: istio
  sessionAffinity: None
  type: ClusterIP
