openshift/istio/ingress/IngressVirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: se-ift-ufsprovider-ingress
spec:
  exportTo:
  - .
  gateways:
  - ingress-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: ufs-provider
        port:
          number: 8080
      weight: 100
